# multithreaded_wav2mp3

./: CMakeLists.txt  README.md  executable_for_testing.rar  readme_build_process.txt
linuxlib/lame/lib/: libmp3lame.so.0.0.0
linuxlib/sndfile/include/: config.h
src/: Main.cpp  Task.cpp  Task.h  datathread.cpp  datathread.h
